# list

./: .gitignore  Dockerfile  compose.yaml
backend/: Cargo.toml
backend/.sqlx/: query-08cce122c8eb9b390e5411cc08d2e735de7230a596fa2f2ba472bed6a9b4a75c.json  query-22cfbc98dd0ef819855871f28d46d2a3b8375885ba8483f978f93a7c9f5136d3.json  query-27f892f18aed591bcb410f7d8019e26d2e6691aee3e5526c4c283d162564e486.json  query-2dbd5f942702d34f9bd692202b255df3ce110edf22c5808fa0e5777b42a331b7.json  query-31d066ed940e2208d12709dc53d483b9067cea7c63f760ca05262f655d6402c1.json  query-3356cdd106b7af4e58f634b38739eadac7639f1a5a04cc6423fea71a10b7faab.json  query-34c44e8965bf3806b19ea4a53e79064624c7adbc230432242c89414375ea6f0b.json  query-467dcd7fd379750cbf30a190d06dc1b3e61b1bd7ef288fbf6fbedec52c276434.json  query-51d463ebbeb0ac8af60ad7ea908dba074d59b7dfadff1724d83093cc83f25fb7.json  query-52d29acc6e6026eda021fb02646e54570e567d5aecb797125da3c51601764066.json  query-5ddc172c952baf0ab08d2c1473dd48ffbefdb39eee8f7d96b90c3f631a4792a7.json  query-67ba1340ea67726c36b949913c3e37d20c3d4ac1e0dd5bee171fb14d39c4a939.json  query-6ce6f8ae53cb548cd822cb9e49f8f5c636a3317bf4a23a2466979d97d1d0e568.json  query-7537644947118c03e9e0da27fd7ec24e88ed7ce3448abffab7b92271742f2e6e.json  query-b6fb17a3390b58fe627bfc31925355b035bf3e76e6a4d2f2a2191cff142341cd.json  query-b77cb11c8287fa41d8e5b76080b4dd57a795c8d1b417b4cc0b9266862190a536.json  query-ce644c8de2b423f5e8c9079ea7eb3175f5dea2d8b7c407b17a306e5166aab3e4.json  query-d19902a40b35ca460778a8cb9e4cce2fdfc4011d08cdfdd27a449800460d8540.json  (+3 more)
backend/src/: db.rs  main.rs
(+18 files in other folders)
