[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "1.0"
axum = { version = "0.6", features = ["ws", "tracing", "json"] }
tower-http = { version = "0.4", features = ["tracing", "cors", "trace", "auth", "timeout"] }
axum-typed-websockets = "0.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
